syntax = "proto3";
package pb;
option go_package = "./pb";
import "common.proto";

//MessageSendReq 发送消息请求
message MessageSendReq {
  RequestHeader header = 1;
  //消息
  Message message = 2;
  //禁止走队列
  bool disableQueue = 3;
}

//MessageSendResp 发送消息响应
message MessageSendResp {
  ResponseHeader header = 1;
}

//MessageBatchSendReq 批量发送消息请求
message MessageBatchSendReq {
  RequestHeader header = 1;
  //消息
  repeated Message messages = 2;
  //禁止走队列
  bool disableQueue = 3;
}

//MessageBatchSendResp 批量发送消息响应
message MessageBatchSendResp {
  ResponseHeader header = 1;
}

//MessageInsertReq 插入消息请求
message MessageInsertReq {
  RequestHeader header = 1;
  //消息
  repeated Message messages = 2;
}

//MessageInsertResp 插入消息响应
message MessageInsertResp {
  ResponseHeader header = 1;
}

//MessagePushReq 推送消息请求
message MessagePushReq {
  RequestHeader header = 1;
  //消息
  repeated Message message = 2;
}

//MessagePushResp 推送消息响应
message MessagePushResp {
  ResponseHeader header = 1;
}

//MessageContentText 图文消息
message MessageContentText {
  message Item {
    enum Type {
      //文本
      TEXT = 0;
      //图片
      IMAGE = 1;
      //@
      AT = 2;
    }
    //图片
    message Image {
      //图片地址
      string url = 1;
      //宽度
      int32 width = 2;
      //高度
      int32 height = 3;
    }
    //@用户信息
    message At {
      //用户id
      string userId = 1;
      //用户名称, 渲染时先获取用户本地信息中的备注，如果没有备注，那么就显示该名称
      string name = 2;
    }
    //类型
    Type type = 1;
    //文本
    string text = 2;
    optional Image image = 3;
    optional At at = 4;
  }
  //items 图文消息
  repeated Item items = 1;
}

service messageService {
  //MessageInsert 插入消息
  //二次开发时，需要实现该接口
  rpc MessageInsert(MessageInsertReq) returns (MessageInsertResp);
  //MessageSend 发送消息
  rpc MessageSend(MessageSendReq) returns (MessageSendResp);
  //MessageBatchSend 批量发送消息
  rpc MessageBatchSend(MessageBatchSendReq) returns (MessageBatchSendResp);
  //MessagePush 推送消息
  rpc MessagePush(MessagePushReq) returns (MessagePushResp);
}

//NoticeContentNewFriendRequest 通知内容-新的好友请求
message NoticeContentNewFriendRequest {}
//NoticeContentJoinNewGroup 通知内容-加入新群
message NoticeContentJoinNewGroup {
  string groupId = 1;
}
//NoticeContentOnlineStatus 通知内容-用户在线状态
message NoticeContentOnlineStatus {
  string userId = 1; // 用户id
  bool online = 2; // 是在线还是离线
}

//NoticeSend 通知发送

message NoticeSendReq {
  RequestHeader header = 1;
  Notice notice = 2;
  //追加用户
  repeated string userIds = 3;
  //是否广播
  bool broadcast = 4;
}

message NoticeSendResp {
  ResponseHeader header = 1;
}

//NoticeBatchSend 通知批量发送

message NoticeBatchSendReq {
  RequestHeader header = 1;
  repeated NoticeSendReq notices = 2;
}

message NoticeBatchSendResp {
  ResponseHeader header = 1;
}

//ListNoticeReq 获取通知列表

message ListNoticeReq {
  RequestHeader header = 1;
  message Conversation {
    //会话id
    string conversationId = 1;
    //会话类型
    ConversationType conversationType = 2;
  }
  //会话id
  repeated Conversation convList = 2;
  //SortGt 排序大于
  int64 SortGt = 3;
  //Limit 限制条数
  int64 Limit = 4;
}

message ListNoticeResp {
  ResponseHeader header = 1;
  repeated Notice notices = 2;
}


service noticeService {
  //NoticeSend 通知发送
  rpc NoticeSend(NoticeSendReq) returns (NoticeSendResp);
  //NoticeBatchSend 通知批量发送
  rpc NoticeBatchSend(NoticeBatchSendReq) returns (NoticeBatchSendResp);
  //ListNotice 获取通知列表
  rpc ListNotice(ListNoticeReq) returns (ListNoticeResp);
}
