package pb

func (x *GatewayGetUserConnectionReq) SetHeader(header *RequestHeader) {
	x.Header = header
}

func (x *GatewayBatchGetUserConnectionReq) SetHeader(header *RequestHeader) {
	x.Header = header
}

func (x *GatewayGetConnectionByFilterReq) SetHeader(header *RequestHeader) {
	x.Header = header
}

func (x *GatewayWriteDataToWsReq) SetHeader(header *RequestHeader) {
	x.Header = header
}

func (x *GatewayKickWsReq) SetHeader(header *RequestHeader) {
	x.Header = header
}

func (x *UserRegisterReq) SetHeader(header *RequestHeader) {
	x.Header = header
}

func (x *UserAccessTokenReq) SetHeader(header *RequestHeader) {
	x.Header = header
}

func (x *CreateRobotReq) SetHeader(header *RequestHeader) {
	x.Header = header
}

func (x *RefreshUserAccessTokenReq) SetHeader(header *RequestHeader) {
	x.Header = header
}

func (x *RevokeUserAccessTokenReq) SetHeader(header *RequestHeader) {
	x.Header = header
}

func (x *FriendApplyReq) SetHeader(header *RequestHeader) {
	x.Header = header
}

func (x *ListFriendApplyReq) SetHeader(header *RequestHeader) {
	x.Header = header
}

func (x *FriendApplyHandleReq) SetHeader(header *RequestHeader) {
	x.Header = header
}

func (x *ListNoticeReq) SetHeader(header *RequestHeader) {
	x.Header = header
}

func (x *MessageBatchSendReq) SetHeader(header *RequestHeader) {
	x.Header = header
}

func (x *GroupCreateReq) SetHeader(header *RequestHeader) {
	x.Header = header
}

func (x *GatewayGetUserConnectionResp) SetHeader(header *ResponseHeader) {
	x.Header = header
}

func (x *GatewayBatchGetUserConnectionResp) SetHeader(header *ResponseHeader) {
	x.Header = header
}

func (x *GatewayGetConnectionByFilterResp) SetHeader(header *ResponseHeader) {
	x.Header = header
}

func (x *GatewayWriteDataToWsResp) SetHeader(header *ResponseHeader) {
	x.Header = header
}

func (x *GatewayKickWsResp) SetHeader(header *ResponseHeader) {
	x.Header = header
}

func (x *UserRegisterResp) SetHeader(header *ResponseHeader) {
	x.Header = header
}

func (x *UserAccessTokenResp) SetHeader(header *ResponseHeader) {
	x.Header = header
}

func (x *CreateRobotResp) SetHeader(header *ResponseHeader) {
	x.Header = header
}

func (x *RefreshUserAccessTokenResp) SetHeader(header *ResponseHeader) {
	x.Header = header
}

func (x *RevokeUserAccessTokenResp) SetHeader(header *ResponseHeader) {
	x.Header = header
}

func (x *FriendApplyResp) SetHeader(header *ResponseHeader) {
	x.Header = header
}

func (x *ListFriendApplyResp) SetHeader(header *ResponseHeader) {
	x.Header = header
}

func (x *FriendApplyHandleResp) SetHeader(header *ResponseHeader) {
	x.Header = header
}

func (x *ListNoticeResp) SetHeader(header *ResponseHeader) {
	x.Header = header
}

func (x *MessageBatchSendResp) SetHeader(header *ResponseHeader) {
	x.Header = header
}

func (x *GroupCreateResp) SetHeader(header *ResponseHeader) {
	x.Header = header
}
